随便加个新年页面

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>Hello World!</h1>
         <p>I'm hosted with github pages</p>
+        <a href="newYear.html">new year</a>
     </body>
 </html>
