--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <body>
         <h1>Hello World!</h1>
         <p>I'm hosted with github pages</p>
-        <a href="newYear.html">new year</a>
+        <a href="newYear.html">new year</a><br>
+        <a href="public/index.html">my blog</a>
     </body>
 </html>
